# Timer

./: .gitignore  CMakeLists.txt  README.md
src/: Timer.hpp  main.cpp
tests/: CMakeLists.txt  advanced_clock.cpp  simple_clock.cpp  sleeper.cpp
